[package]
name = "fixedbitset-stack"
version = "0.5.7"
authors = ["Xintong Sun <xs28@rice.edu>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"

description = "A forked version of FixedBitSet that supports const generics "
documentation = "https://docs.rs/fixedbitset-stack/"
repository = "https://github.com/Dan-wanna-M/fixedbitset"

keywords = ["container", "data-structure", "bitvec", "bitset", "no_std"]
categories = ["data-structures"]

[features]
std = []
default = ["std"]

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
serde_json = "1.0"
